# dialectometry-distances

./: .gitignore  Maria-Apostolidou-3.ipynb  Maria-Apostolidou-no-embeds.ipynb  Maria_Apostolidou_3.ipynb  README.md  constants.py  dataset_split.py  evaluation.ipynb  matrix.ipynb  pyproject.toml  romanize_files.py
