[project]
name = "dialectometry-distances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "conllu>=6.0.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pip>=26.1.1",
    "seaborn>=0.13.2",
    "uroman>=1.3.1.1",
]
